public/css/app.css
.animal-frame{
  display: inline-block;;
  margin-top: 20px;
  border: 1px solid black;
  height: 350px;
  width: 100%;

}
.img-selectanimal{
  display: inline-block;
  height: 80%;
  margin-top:2%;
}

.navbar-foodsy{
  padding: 0px;
}

